--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.8"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
 pytest = "^7.1.3"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 fizzbuzz = "fizz_buzz.engine:main"
